[package]
name = "gb_emu"
version = "0.1.0"
edition = "2021"
readme = "Readme.md"
description = "GameBoy emulator"
keywords = ["Game Boy", "Rust", "Emulator"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"

[dependencies.sdl2]
version = "0.35.2"

[profile.dev]
overflow-checks = false
opt-level = 0

[profile.release]
opt-level = 3
overflow-checks = false
codegen-units = 1 # Useful for optimizing code
panic = "abort"